--- a/i3/config
+++ b/i3/config
@@ -203,6 +203,7 @@ assign [class="Telegram"] $ws7
 assign [class="whatsapp-nativefier*"] $ws7
 assign [class="Signal"] $ws7
 assign [class="Slack"] $ws7
+assign [class="discord"] $ws7
 assign [class="Spotify"] $ws8
 assign [class="Transmission"] $ws9
 assign [class="Deluge"] $ws9
