--- a/i3/config
+++ b/i3/config
@@ -310,6 +310,7 @@ exec --no-startup-id keepassxc
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec_always --no-startup-id setxkbmap -layout us -variant altgr-intl -option nodeadkeys -option "lv3:caps_switch"
+exec_always --no-startup-id nitrogen --set-zoom-fill ~/.config/i3/wallpaper
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
