--- a/i3/config
+++ b/i3/config
@@ -69,6 +69,7 @@ bindsym XF86AudioLowerVolume exec amixer set Master 5%-
 bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
 
 # Start Applications
+bindsym $mod+F1 exec joplin
 bindsym $mod+F2 exec chromium
 bindsym $mod+Shift+F2 exec "chromium -incognito"
 bindsym $mod+F3 exec pcmanfm
