added week day name abbreviation

--- a/i3status/config
+++ b/i3status/config
@@ -73,5 +73,5 @@ read_file brightness {
 }
 
 tztime local {
-        format = " 📅 %Y-%m-%d ⌚ %H:%M "
+        format = " 📅 %a %Y-%m-%d ⌚ %H:%M "
 }
