brought in wallpapers

--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,9 +1,9 @@
 [xin_0]
-file=/mnt/Data/4_pictures/4.02_wallpaper/outrun_gradient.jpg
+file=/home/ndts/.config/i3/wallpaper1
 mode=5
 bgcolor=#002a36
 
 [xin_1]
-file=/mnt/Data/4_pictures/4.02_wallpaper/green_gradient.png
+file=/home/ndts/.config/i3/wallpaper2
 mode=5
 bgcolor=#002a36
