--- a/i3/config
+++ b/i3/config
@@ -301,11 +301,11 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id blueman-applet
 exec --no-startup-id light-locker
-exec --no-startup-id redshift-gtk
-exec --no-startup-id nextcloud --background
-exec --no-startup-id mullvad-vpn
-exec --no-startup-id keepassxc
-exec --no-startup-id ~/.config/i3/brightness.sh =
+exec redshift-gtk
+exec nextcloud --background
+exec mullvad-vpn
+exec keepassxc
+exec ~/.config/i3/brightness.sh =
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec_always --no-startup-id setxkbmap -layout us -variant altgr-intl -option nodeadkeys -option "lv3:caps_switch"
