--- a/i3/config
+++ b/i3/config
@@ -202,6 +202,7 @@ bindsym $mod+Ctrl+period move container to workspace next; workspace next
 # Open applications on specific workspaces
 assign [class="Telegram"] $ws7
 assign [class="discord"] $ws7
+assign [class="Signal"] $ws7
 assign [class="Spotify"] $ws8
 assign [class="Transmission"] $ws9
 
