--- a/i3/config
+++ b/i3/config
@@ -36,6 +36,7 @@ bindsym $mod+Shift+q kill
 # start program launcher
 bindsym $mod+d exec rofi -show run -width 25 -theme default -font "DejaVu Sans Mono 16"
 bindsym $mod+Shift+d exec rofi -show window -width 25 -theme default -font "DejaVu Sans Mono 16"
+bindsym $mod+Shift+semicolon exec rofi -show emoji -width 25 -theme default -font "DejaVu Sans Mono 16" -modi emoji
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
